force-app/main/default/objects/college__c/fields/dateofbirth__c.field-meta.xml
<CustomField>
    <fullName>dateofbirth__c</fullName>
    <label>dateofbirth</label>
    <type>Date</type>
</CustomField>