force-app/main/default/objects/college__c/fields/emailid__c.field-meta.xml
<CustomField>
    <fullName>emailid__c</fullName>
    <label>emailid</label>
    <type>Email</type>
</CustomField>