force-app/main/default/objects/college__c/fields/student_name__c.field-meta.xml
<CustomField>
    <fullName>student_name__c</fullName>
    <label>student name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>